[package]
authors = ["konstin <konstin@mailbox.org>", "messense <messense@icloud.com>"]
name = "maturin"
version = "1.0.0-beta.5"
description = "Build and publish crates with pyo3, rust-cpython and cffi bindings as well as rust binaries as python packages"
exclude = ["test-crates/**/*", "sysconfig/*", "test-data/*", "ci/*", "tests/*", "guide/*", ".github/*"]
homepage = "https://github.com/pyo3/maturin"
readme = "README.md"
repository = "https://github.com/pyo3/maturin"
license = "MIT OR Apache-2.0"
keywords = ["python", "cffi", "packaging", "pypi", "pyo3"]
categories = ["api-bindings", "development-tools::ffi", "command-line-utilities"]
edition = "2021"
rust-version = "1.68"

[[bin]]
name = "maturin"

[lib]
name = "maturin"

[dependencies]
anyhow = "1.0.70"
base64 = "0.21.0"
glob = "0.3.1"
cargo-config2 = "0.1.6"
cargo_metadata = "0.15.4"
cargo-options = "0.6.0"
cbindgen = { version = "0.24.3", default-features = false }
flate2 = "1.0.25"
goblin = "0.6.1"
platform-info = "1.0.2"
regex = "1.7.3"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sha2 = "0.10.6"
tar = "0.4.38"
tempfile = "3.5.0"
toml = "0.7.3"
toml_edit = "0.19.8"
zip = { version = "0.6.4", default-features = false, features = ["bzip2", "deflate", "time"] }
thiserror = "1.0.40"
dirs = "5.0.0"
fs-err = "2.9.0"
fat-macho = { version = "0.4.6", default-features = false }
once_cell = "1.17.1"
rustc_version = "0.4.0"
semver = "1.0.17"
target-lexicon = "0.12.6"
indexmap = "1.9.3"
pyproject-toml = "0.5.1"
python-pkginfo = "0.5.5"
textwrap = "0.16.0"
ignore = "0.4.20"
itertools = "0.10.5"
lddtree = "0.3.2"
cc = "1.0.79"
dunce = "1.0.3"
normpath = "1.1.1"
pep440_rs = { version = "0.3.4", features = ["serde"] }
pep508_rs = { version = "0.1.2", features = ["serde"] }
time = "0.3.20"

# cli
clap = { version = "4.2.1", features = ["derive", "env", "wrap_help"] }
clap_complete_command = { version = "0.5.1", optional = true }

# cross compile
cargo-zigbuild = { version = "0.16.5", default-features = false, optional = true }
cargo-xwin = { version = "0.14.2", default-features = false, optional = true }

# log
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"], optional = true }

# project scaffolding, maturin new/init/generate-ci
dialoguer = { version = "0.10.3", default-features = false, optional = true }
console = { version = "0.15.5", optional = true }
minijinja = { version = "0.31.0", optional = true }

# upload
bytesize = { version = "1.2.0", optional = true }
configparser = { version = "3.0.2", optional = true }
multipart = { version = "0.18.0", features = ["client"], default-features = false, optional = true }
ureq = { version = "2.6.2", features = ["gzip", "socks-proxy"], default-features = false, optional = true }
native-tls = { version = "0.2.11", optional = true }
rustls = { version = "0.20.8", optional = true }
rustls-pemfile = { version = "1.0.2", optional = true }
keyring = { version = "2.0.1", default-features = false, features = ["linux-no-secret-service"], optional = true }
wild = { version = "2.1.0", optional = true }

[dev-dependencies]
indoc = "2.0.1"
pretty_assertions = "1.3.0"
rustversion = "1.0.12"
time = { version = "0.3.20", features = ["macros"] }
trycmd = "0.14.15"
which = "4.4.0"

[features]
default = ["full", "rustls"]

full = ["cli-completion", "cross-compile", "log", "scaffolding", "upload"]

log = ["tracing-subscriber"]

cli-completion = ["dep:clap_complete_command"]

upload = ["ureq", "multipart", "configparser", "bytesize", "dialoguer/password", "wild"]
# keyring doesn't support *BSD so it's not enabled in `full` by default
password-storage = ["upload", "keyring"]

rustls = ["dep:rustls", "ureq?/tls", "cargo-xwin?/rustls-tls", "dep:rustls-pemfile"]
native-tls = ["dep:native-tls", "ureq?/native-tls", "cargo-xwin?/native-tls", "dep:rustls-pemfile"]

# cross compile using zig or xwin
cross-compile = ["zig", "xwin"]
zig = ["cargo-zigbuild"]
xwin = ["cargo-xwin"]

# project scaffolding
scaffolding = ["dialoguer", "console", "minijinja"]

# Internal feature to speed up the tests significantly
faster-tests = []

# Deprecated features, keep it now for compatibility
human-panic = []

# Without this, compressing the .gz archive becomes notably slow for debug builds
[profile.dev.package.miniz_oxide]
opt-level = 3
# Speedup cargo-xwin for debug builds
[profile.dev.package.cab]
opt-level = 3
[profile.dev.package.msi]
opt-level = 3
